src/objects/BMCServiceDesk__CategoryTypes__c.object
<CustomObject>
    <description>This object allows you to store data for category types.</description>
    <fields>
        <fullName>BMCServiceDesk__Export__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field to allow the record to be exported from the RF Category Migration Pentaho package.</inlineHelpText>
        <label>Tag for Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if the category type record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Category Type</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BMCServiceDesk__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Category Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Category Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__CategoryType_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL(Name ) , ISBLANK(Name))</errorConditionFormula>
        <errorMessage>Please enter value in Category Type field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__UniqueCategoryTypeCheck</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNEW(),
NOT(ISBLANK(VLOOKUP( $ObjectType.BMCServiceDesk__CategoryTypes__c.Fields.Name , $ObjectType.BMCServiceDesk__CategoryTypes__c.Fields.Name,NULLVALUE(Name, Name)))),
IF(ISCHANGED(Name),
IF((LOWER(Name) = LOWER(VLOOKUP($ObjectType.BMCServiceDesk__CategoryTypes__c.Fields.Name , $ObjectType.BMCServiceDesk__CategoryTypes__c.Fields.Name,Name))&amp;&amp;LOWER(PRIORVALUE(Name)) != Lower(Name)), TRUE, FALSE),
FALSE))</errorConditionFormula>
        <errorMessage>A Category Type record with this Category Type already exists. Enter unique Category Type.</errorMessage>
    </validationRules>
</CustomObject>